# keepitshort

./: .env  Cargo.toml  README.md
frontend/: next.config.ts
frontend/app/: .api.tsx.swp  api.tsx  layout.tsx  page.tsx
src/: main.rs
src/models/: url_model.rs
src/routes/: routes.rs
src/services/: db.rs
