[package]
name = "keepitshort"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "http2"] }
chrono = "0.4.43"
dotenv = "0.15.0"
mongodb = "3.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = "1.20.0"
